--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Simply Savings - Smart Investment Solutions",
-  "short_name": "Simply Savings",
+  "name": "Simply Saving - Smart Investment Solutions",
+  "short_name": "Simply Saving",
   "description": "Make Your Savings Work For You. Guaranteed returns up to 4% per annum with Simple Savings, Simple Growth, and Simple Income investment options.",
   "start_url": "/",
   "display": "standalone",
