Revert "Rename brand references to 'Simply Saving'"
This reverts commit 76debe9f619680e73ecf39a64add969cc47a2b99.

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Simply Saving - Smart Investment Solutions",
-  "short_name": "Simply Saving",
+  "name": "Simply Savings - Smart Investment Solutions",
+  "short_name": "Simply Savings",
   "description": "Make Your Savings Work For You. Guaranteed returns up to 4% per annum with Simple Savings, Simple Growth, and Simple Income investment options.",
   "start_url": "/",
   "display": "standalone",
